# realtime-news-sentiment

./: README.md  app.py  main.py  news_fetcher.py  pyproject.toml  requirements.txt  sentiment.py
backend/: api.py
backend/services/: news_fetcher.py  sentiment.py
frontend/: app.py
