[project]
name = "realtime-news-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
]
