[project]
name = "realtime-news-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "transformers>=4.21.0",
    "uvicorn>=0.18.0",
]
